# bazel_utilities

./: BUILD  MODULE.bazel  hosts.bzl
solutions/: solutions.bzl  solutions_mk2.bzl
toolchains/MinGW/: MinGW.bzl  MinGW_archives.bzl  MinGW_localhost.bzl  compiler.BUILD
toolchains/arm_none_eabi/: arm_all_files.bzl  arm_none_eabi.bzl  arm_none_eabi_archives.bzl  arm_none_eabi_localhost.bzl  compiler.BUILD
toolchains/impl/: BUILD  archives_registry.bzl  todo.md  toolchain.bzl  toolchain_build_configuration.bzl  toolchain_config.bzl  toolchain_registry.bzl  utils.bzl
tools/: BUILD  tools.bzl
tools/vscode/: BUILD  gen_vscode.py  vscode_config.bzl  vscode_files.bzl  vscode_launch.bzl  vscode_tasks.bzl
